--- a/stock_ipv/views/stock_ipv_view.xml
+++ b/stock_ipv/views/stock_ipv_view.xml
@@ -42,11 +42,11 @@
                     <field name="show_check_availability" invisible="1"/>
                     <field name="show_validate" invisible="1"/>
 
-                    <button name="action_confirm"
+                    <!--<button name="action_confirm"
                             type="object"
                             attrs="{'invisible': [('show_mark_as_todo', '=', False)]}"
                             string="Mark to Do"
-                            class="oe_highlight"/>
+                            class="oe_highlight"/>-->
 
                     <button name="action_assign"
                             attrs="{'invisible': [('show_check_availability', '=', False)]}"
@@ -57,7 +57,7 @@
 
 
                     <button name="button_validate"
-                            attrs="{'invisible': ['|', ('state', 'in', ('waiting','confirmed')), ('show_validate', '=', False)]}"
+                            attrs="{'invisible': [('show_validate', '=', False)]}"
                             string="Validate"
                             type="object"
                             class="oe_highlight"
@@ -78,18 +78,32 @@
                     </group>
                     <notebook>
                         <page name="Products" string="Product to Sales">
-                            <field name="ipv_lines">
+                            <field name="is_locked" invisible="1"/>
+                            <field name="ipv_lines" attrs="{'readonly': [('is_locked', '=', True), ('state', '=', 'done')]}">
                                 <tree editable="bottom">
+                                    <field name="is_locked" invisible="1"/>
+                                    <field name="is_manufactured" invisible="1"/>
+                                    <field name="is_initial_demand_editable" invisible="1"/>
                                     <field name="product_id" required="1"
                                            domain="[('type', 'in', ['product']), ('available_in_pos', '=', True)]"/>
                                     <field name="product_uom"/>
                                     <field name="stock_location_init_qty"/>
-                                    <field name="product_uom_qty"/>
+                                    <field name="product_uom_qty" attrs=""/>
                                     <field name="reserved_availability" attrs="{'column_invisible': [('parent.state', 'not in', ['assigned'])]}"/>
-                                    <field name="state" attrs="{'column_invisible': [('parent.state', 'in', ['draft'])]}"/>
-
+                                    <field name="state" attrs=""/>
                                 </tree>
 
+                            </field>
+                        </page>
+                        <page name="Raw_Material" string="Raw Materials">
+                            <field name="move_raw_ids">
+                                <tree>
+                                    <field name="product_id"/>
+                                    <field name="product_qty"/>
+                                    <field name="reserved_availability" attrs=""/>
+                                    <field name="quantity_done"/>
+                                    <field name="state"/>
+                                </tree>
                             </field>
                         </page>
                     </notebook>
